# garden

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.githooks/: pre-commit
.github/: ## Chat Customization Diagnostics.md  copilot-instructions.md
.github/workflows/: ci.yml  client.yml
api/: Cargo.toml  README.md
api/migrations/: V1__create_schema.down.sql  V1__create_schema.sql  V2__seed_vegetables.down.sql  V2__seed_vegetables.sql  V3__add_varieties.down.sql  V3__add_varieties.sql  V4__variety_not_null.down.sql  V4__variety_not_null.sql  V5__swap_vegetable_variety.down.sql  V5__swap_vegetable_variety.sql  V6__companions_to_vegetables.down.sql  V6__companions_to_vegetables.sql  V7__add_groups.down.sql  V7__add_groups.sql
api/src/: main.rs
api/src/adapters/inbound/http/: dto.rs  hateoas.rs  localization.rs  mod.rs  openapi.rs  routes.rs
api/src/adapters/inbound/http/handlers/: groups.rs  mod.rs  plan.rs  varieties.rs  vegetables.rs
api/src/adapters/outbound/postgres/: group_repository.rs  mod.rs  variety_repository.rs  variety_response_repository.rs  vegetable_repository.rs
api/src/application/: mod.rs
api/src/application/models/: request.rs
api/src/application/ports/: group_repository.rs  mod.rs  variety_repository.rs  variety_response_repository.rs  vegetable_repository.rs
api/src/application/use_cases/: groups.rs  mod.rs  plan_garden.rs  varieties.rs  vegetables.rs
api/src/domain/: mod.rs  test_fixtures.rs
api/src/domain/models/: garden.rs  group.rs  hateoas.rs  mod.rs  request.rs  response.rs  variety.rs  vegetable.rs  warnings.rs
api/src/domain/services/: allocation.rs  companion.rs  filter.rs  grid.rs  helpers.rs  placement.rs  planner.rs  response.rs  schedule.rs
api/tests/: api_integration.rs  planner_e2e.rs  postgres_repository.rs
api/tests/common/: db.rs  mod.rs
api/tests/e2e/: companions.rs  groups.rs  mod.rs  plan.rs  scenarios.rs  varieties.rs  vegetables.rs
bruno/: bruno.json
client/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
kokopelli-scrapper/: Cargo.toml  output.json
kokopelli-scrapper/src/: main.rs
pg/: init.sql
pgadmin/: pgpass  servers.json
src/: lib.rs  main.rs
tests/: api_integration.rs  planner_e2e.rs
(+117 files in other folders)
