[workspace]
members = ["."]
resolver = "2"

[package]
name = "garden"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "garden"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
