[package]
name = "garden"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "garden"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = "0.14"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
refinery = { version = "0.8", features = ["tokio-postgres"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
