[package]
name = "kokopelli-scrapper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kokopelli-scrapper"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
